--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ google_analytics_key:  ## UA-49607422-1 put YOUR key here to enable tracking! (b
 
 ### template colors, used site-wide via css ###
 colors:
-  black:     '#542437' #'#111111'
-  white:     '#C02942'        #'#f8f8f8'
-  blue:      '#49a7e9'
-  green:     '#9bcf2f'
-  purple:    '#c869bf'
-  orange:    '#fab125'
-  turquoise: '#0fbfcf'
+  black:     '#0C0E0D'
+  white:     '#FFFFFF'
+  blue:      '#256697'
+  green:     '#13613A'
+  purple:    '#48397C'
+  orange:    '#CC1414'
+  turquoise: '#CBE9FC'
