--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,7 @@ permalink: / ## disables post output
 timezone: null
 lsi: false
 markdown: kramdown
-highlighter: pygments
-
+highlighter: rouge
 
 ### content configuration ###
 title:       "Kala Bharath's Personal Website"
