--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ keywords:    "Kala Bharath Pilla, Kala Bharath PhD, PCS, RDC, Smotifs, Hybrid st
 description: "Personal website for my research, code and rant "
 favicon:     "img/favicon.ico"
 touch_icon:  "img/apple-touch-icon.png"
-google_analytics_key:  ## UA-49607422-1 put YOUR key here to enable tracking! (blank to disable)
+google_analytics_key:  UA-66233516-1 ## UA-49607422-1 put YOUR key here to enable tracking! (blank to disable)
 
 
 ### template colors, used site-wide via css ###
