--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ highlighter: rouge
 title:       "Kala Bharath's Personal Website"
 keywords:    "Kala Bharath Pilla, Kala Bharath PhD, PCS, RDC, Smotifs, Hybrid structure prediction, Protein structure prediction"
 description: "Personal website for my research, code and rant "
-favicon:     "img/favicon.ico"
-touch_icon:  "img/apple-touch-icon.png"
+favicon:     "lightbulb-o"
+touch_icon:  "lightbulb-o"
 google_analytics_key:  UA-66233516-1 ## UA-49607422-1 put YOUR key here to enable tracking! (blank to disable)
 
 
